deployments/kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vectordb-headless
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: vectordb
  ports:
    - name: https
      port: 6333
      targetPort: https
---
apiVersion: v1
kind: Service
metadata:
  name: vectordb
spec:
  selector:
    app.kubernetes.io/name: vectordb
  ports:
    - name: https
      port: 6333
      targetPort: https
